modufy git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+iot_things_library_infra/cdk-outputs.json
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
