add backup infrastructure

--- a/iot-things-library-infra/Makefile
+++ b/iot-things-library-infra/Makefile
@@ -3,4 +3,4 @@ BuildEnv:
 	python3 -m venv ./.venv;source .venv/bin/activate;pip install -r requirements.txt
 
 Deploy:
-	source .venv/bin/activate;cdk deploy --require-approval never --outputs-file ./cdk-outputs.json
+	source .venv/bin/activate;cdk deploy --all --require-approval never --outputs-file ./cdk-outputs.json
