--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/iot_things_library_infra/cdk-outputs.json
+**/cdk-outputs.json
 
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
